argocdbootstrap/argocd-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
    host: argocd.kitkube.dk
  tls:
  - hosts:
    - argocd.kitkube.dk
    secretName: argocd-secret
